--- a/app.css
+++ b/app.css
@@ -86,23 +86,36 @@ img{
         font-size: 1.3rem;
     }
     .nav a.active{
-        background-color: yellow;
+        background-color: #FFF;
         color: #000;
-        padding: 5px 10px;
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
+        padding: 5px 20px;
+        border-radius: 300px;
+        -webkit-border-radius: 300px;
+        -moz-border-radius: 300px;
+        -ms-border-radius: 300px;
+        -o-border-radius: 300px;
     }
     .header_bas{
-        margin-top: 80px;
+        margin-top: 70px;
     }
     .header_bas h1{
-        padding-bottom: 40px;
+        padding-bottom: 30px;
     }
     .header_bas h1 span{
         display: inline-block;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .header{
+        height: 500px;
+    }
+    .header_bas{
+        margin-top: 90px;
+    }
+    .header_bas h1{
+        padding-bottom: 40px;
+        font-size: 2rem;
     }
 }
 
