--- a/app.css
+++ b/app.css
@@ -20,21 +20,18 @@ img{
 
 .header{
     background: url('Img/image-header.jpg') center center / cover no-repeat;
-    height: 400px;
+    height: 600px;
 }
 
 .header_top{
-    text-align: center;
-    padding-top: 15px;
-}
-
-.nav{
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 30px;
 }
 
 .nav a{
-    padding: 0 10px;
-    font-size: 1.1rem;
+    margin-left: 20px;
+    font-size: 1rem;
     text-transform: capitalize;
     font-weight: 400;
     color: #fff1f1cc;
@@ -49,73 +46,212 @@ img{
     color: #000;
 }
 
+.nav a.active{
+    padding: 10px 20px;
+    background: rgba(0, 0, 0, .1);
+    color: #fff1f1cc;
+    border-radius: 222px;
+    -webkit-border-radius: 222px;
+    -moz-border-radius: 222px;
+    -ms-border-radius: 222px;
+    -o-border-radius: 222px;
+}
+
 .header_bas{
     text-align: center;
-    margin-top: 15px;
+    margin-top: 90px;
 }
 
 .header_bas h1{
-    color: #FFF;
+    padding-bottom: 60px;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 2rem;
     text-transform: uppercase;
-    padding-bottom: 10px;
+    letter-spacing: 4px;
+    color: #FFF;
 }
 
-.header_bas h1 span{
+.section_services{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.section_services div{
+    width: 50%;
+    height: 75vh;
+}
+
+.section_services_infos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 160px;
+    gap: 20px;
+}
+
+.section_services_infos h2{
+    color: #000;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.section_services_infos h2 span{
     display: block;
 }
 
-/*Cette partie prend en charge les écrans depuis 700px jusqu'à 1022px*/
+.section_services_infos p{
+    color: #686868;
+    font-family: sans-serif;
+}
 
-@media screen and (min-width: 700px) {
+.section_services_infos a{
+    text-transform: uppercase;
+    color: #100f0f;
+    font-weight: 700;
+    font-size: .825rem;
+}
+
+.section_services_infos a::after{
+    content: '';
+    display: block;
+    position: relative;
+    width: 90px;
+    height: 5px;
+    margin-top: -5px;
+    background: rgba(253, 244, 191, .5);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.last a::after{
+    background: rgba(233, 155, 100, .5);
+}
+
+.section_services_oeuf{
+    background: url(/Img/image-transform.jpg) center center / cover;
+}
+
+.section_services_stand-out{
+    background: url(/Img/image-stand-out.jpg) center center / cover;
+}
+
+.section_services_graphic-design, .section_services_photography{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    text-align: center;
+    padding: 20px;
+    gap: 20px;
+}
+
+.section_services_graphic-design p, .section_services_photography p{
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section_services_graphic-design{
+    background: url(/Img/image-graphic-design.jpg) no-repeat center center / cover;
+}
+
+.section_services_photography{
+    background: url(/Img/image-photography.jpg) no-repeat center center / cover;
+}
+
+@media screen and (max-width: 428px) {
     .header{
-        height: 450px;
+        height: 480px;
     }
     .header_top{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-    .nav{
-        margin: 0;
+        flex-direction: column;
+        text-align: center;
     }
     .nav a{
-        font-size: 1.3rem;
+        margin-left: 15px;
     }
     .nav a.active{
-        background-color: #FFF;
+        padding: 10px 20px;
+        background: yellow;
         color: #000;
-        padding: 5px 20px;
-        border-radius: 300px;
-        -webkit-border-radius: 300px;
-        -moz-border-radius: 300px;
-        -ms-border-radius: 300px;
-        -o-border-radius: 300px;
     }
+    
     .header_bas{
-        margin-top: 70px;
+        margin-top: 10px;
     }
     .header_bas h1{
         padding-bottom: 30px;
+        font-size: 1.8rem;
     }
     .header_bas h1 span{
-        display: inline-block;
+        display: block;
+    }
+    .section_services{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .section_services div{
+        width: 100%;
+        height: 40vh;
+    }
+    .section_services_infos{
+        display: block;
+        text-align: center;
+        padding: 40px 60px;
+    }
+    .section_services_infos h2{
+        font-size: 1.4rem;
+    }
+    .section_services_infos p{
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .section_services_infos a::after{
+       margin-left: 90px;
+    }
+    .section_services_oeuf{
+        order: -1;
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 890px) {
     .header{
         height: 500px;
     }
     .header_bas{
-        margin-top: 90px;
+        margin-top: 30px;
     }
     .header_bas h1{
-        padding-bottom: 40px;
-        font-size: 2rem;
+        padding-bottom: 25px;
+    }
+    .header_bas h1 span{
+        display: block;
+    }
+    .section_services{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .section_services div{
+        width: 100%;
+        height: 60vh;
+    }
+    .section_services_infos{
+        text-align: center;
+    }
+    .section_services_infos a::after{
+        display: none;
+     }
+     .section_services_oeuf{
+        order: -1;
     }
 }
+
+
+
+
+
+
 
